--- a/vege/style.css
+++ b/vege/style.css
@@ -37,3 +37,196 @@ body {
 /* ------------------------------- */
 /* ----- DOLE BUDE TVOJE CSS ----- */
 /* ------------------------------- */
+
+/*zobrazení pro mobily*/
+
+:root {
+  --white: rgb(255, 255, 255);
+  --black: rgb(0, 0, 0);
+}
+
+.kontejner {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5rem;
+}
+
+.hlavnirecept {
+  background-image: url("images/salat.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 200px;
+  width: 100%;
+  padding: 0.5rem;
+  flex-basis: 100%;
+  margin-bottom: 0.05rem;
+  order: 1;
+}
+
+.recept {
+  background-size: cover;
+  background-position: center;
+  min-height: 90px;
+  width: 100%;
+  padding: 0.5rem;
+  flex-basis: 100%;
+  margin-bottom: 0.05rem;
+}
+
+.chlebicek {
+  background-image: url("images/chlebicek.jpg");
+  order: 2;
+}
+
+.pita {
+  background-image: url("images/cizrna.jpg");
+  order: 3;
+}
+
+.tacos {
+  background-image: url("images/tacos.jpg");
+  order: 4;
+}
+
+.burger {
+  background-image: url("images/burger.jpg");
+  order: 5;
+}
+
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 1.75rem;
+  color: var(--white);
+  text-shadow: 0 1px 1px var(--black);
+}
+
+h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  font-size: 1.2rem;
+  color: var(--white);
+  text-shadow: 0 1px 1px var(--black);
+}
+
+.komentar,
+.kategorie {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  color: var(--white);
+  text-shadow: 0 1px 1px var(--black);
+}
+
+.hlavnirecept,
+.recept {
+  position: relative;
+}
+
+/*pozice bottom-left*/
+h2,
+h3 {
+  position: absolute;
+  bottom: 0rem;
+  left: 1rem;
+}
+
+/*pozice top-left*/
+.kategorie {
+  position: absolute;
+  top: 0rem;
+  left: 1rem;
+}
+
+/*pozice top-right*/
+.komentar {
+  position: absolute;
+  top: 0rem;
+  right: 1rem;
+}
+
+/*zobrazení pro tablety*/
+@media screen and (min-width: 480px) {
+
+  .kontejner {
+    padding: 1.25rem;
+  }
+
+  .hlavnirecept {
+    min-height: 250px;
+    order: 1;
+    flex: 1;
+    flex-basis: 100%;
+    padding: 1.25rem;
+  }
+
+  .recept {
+    min-height: 150px;
+    padding: 1.25rem;
+  } 
+    
+
+  .chlebicek {
+    order: 2;
+    flex-basis: calc(50% - 0.025rem); 
+    margin-right: 0.05rem;
+  }
+
+  .tacos {
+    order: 3;
+    flex-basis: calc(50% - 0.025rem);
+  }
+
+  .pita {
+    order: 4;
+    flex-basis: calc(50% - 0.025rem);
+    margin-right: 0.05rem;
+  }
+
+  .burger {
+    order: 5;
+    flex-basis: calc(50% - 0.025rem);
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+
+/*zobrazeni pro desktop*/
+
+@media screen and (min-width: 860px) {
+
+   .kontejner {
+    padding: 1.25rem;
+    display: block;
+  }
+  
+  h2 {
+    font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 1.75rem;
+  }
+
+  .hlavnirecept {
+    height: calc(400px + 0.05rem);
+    width: calc((1/3 * 100%) - 0.05rem);
+    float: left;
+    margin-right: 0.05rem;
+  }
+
+  .recept {
+    height: 200px;
+    width: calc((1/3 * 100%) - 0.05rem);
+    position: relative;
+    float: left;
+  } 
+
+}
